# amqp_library

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/app/: Dockerfile
qlibd/: main.py
qlibd/connection_managers/: rabbit_connection_manager.py
qlibd/connection_managers/interfaces/: connection_manager_interface.py
qlibd/containers/: application_container.py
qlibd/core/: application.py  base_handler.py  container.py  event_mixins.py  exceptions.py  queue_manager.py  settings.py
qlibd/handlers/: book_handler.py
qlibd/helpers/: class_helper.py
qlibd/http_server/: http_server.py  routes.py
qlibd/logger/: colored_formatter.py  logger.py
qlibd/metrics/: metric_container.py
qlibd/serializers/: messages.py
qlibd/services/: book_service.py
